@@ -29,6 +29,8 @@ extern zend_module_entry openssl_module_entry;
 #define OPENSSL_RAW_DATA 1
 #define OPENSSL_ZERO_PADDING 2
 
+#define OPENSSL_ERROR_X509_PRIVATE_KEY_VALUES_MISMATCH 0x0B080074
+
 /* Used for client-initiated handshake renegotiation DoS protection*/
 #define OPENSSL_DEFAULT_RENEG_LIMIT 2
 #define OPENSSL_DEFAULT_RENEG_WINDOW 300
