@@ -2,6 +2,10 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Jul 2015, PHP 5.6.12
 
+- OpenSSL:
+  . Fixed bug #69882 (OpenSSL error “key values mismatch” after 
+    openssl_pkcs12_read with extra cert) (Tomasz Sawicki)
+
 09 Jul 2015, PHP 5.6.11
 
 - Core:
